--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -52,3 +52,9 @@ jobs:
 
       - name: Upload test coverage
         uses: codecov/codecov-action@v1
+
+      - name: Upload artifact
+        uses: actions/upload-artifacts@v2
+        with:
+          name: 1.x
+          path: app/build/outputs/apk
