--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -54,7 +54,7 @@ jobs:
         uses: codecov/codecov-action@v1
 
       - name: Upload artifact
-        uses: actions/upload-artifacts@v2
+        uses: actions/upload-artifact@v2
         with:
           name: 1.x
           path: app/build/outputs/apk
